# master-thesis

./: .gitignore  .tags  .tags1  CMakeLists.txt  fabfile.py  message.py
CommunicationPrimitives/applications/: CMakeLists.txt  app_common.c  app_common.h  connect.c
CommunicationPrimitives/applications/aux/: dijkstra_test.c  shuffle_test.c  tlv_test.c
CommunicationPrimitives/applications/broadcast/: broadcast_test.c  destroy_test.c  process_args.c  process_args.h  test_configs.c
CommunicationPrimitives/applications/discovery/: discovery_test.c
CommunicationPrimitives/applications/routing/: ping2_test.c  ping_test.c
CommunicationPrimitives/data_structures/: CMakeLists.txt  double_list.c  double_list.h  graph.c  graph.h  hash_table.c  hash_table.h  list.c  list.h  ordered_list.c  ordered_list.h
CommunicationPrimitives/protocols/broadcast/framework/: CMakeLists.txt  args.c  bcast_header.h  broadcast_header.h  framework.c  framework.h  handlers.c  handlers.h
CommunicationPrimitives/protocols/broadcast/framework/broadcast_algorithm/: CMakeLists.txt  bcast_algorithms.c  bcast_algorithms.h  broadcast_algorithm.c  broadcast_algorithm.h  broadcast_algorithm_private.h  common.h
CommunicationPrimitives/protocols/broadcast/framework/broadcast_algorithm/retransmission_context/: AHBPContext.c  BATMANContext.c  BiFloodingContext.c  ComposeContext.c  DynamicProbabilityContext.c  EmptyContext.c  HopCountAwareRADExtensionContext.c  HopsContext.c  LENWBContext.c  LabelNeighsContext.c  LatencyContext.c  MonitorContext.c  MultiPointRelayContext.c  NeighborsContext.c  ParentsContext.c  RouteContext.c  retransmission_context.c  retransmission_context.h  retransmission_context_private.h
CommunicationPrimitives/protocols/broadcast/framework/broadcast_algorithm/retransmission_delay/: BiFloodingDelay.c  DensityNeighDelay.c  HopCountAwareRADExtensionDelay.c  NullDelay.c  RADExtensionDelay.c  RandomDelay.c  SBADelay.c  TwoPhaseRandomDelay.c  retransmission_delay.c  retransmission_delay.h  retransmission_delay_private.h
CommunicationPrimitives/protocols/broadcast/framework/broadcast_algorithm/retransmission_policy/: AHBPPolicy.c  BATMANPolicy.c  BiFloodingPolicy.c  CountParentsPolicy.c  CountPolicy.c  CriticalNeighPolicy.c  DelegatedNeighborsPolicy.c  DynamicProbabilityPolicy.c  EnhancedRapidPolicy.c  EnsemblePolicy.c  Gossip2Policy.c  Gossip3Policy.c  HopCountAidedPolicy.c  HorizonProbabilityPolicy.c  LENWBPolicy.c  NeighborCountingPolicy.c  PbNeighCountingPolicy.c  ProbabilityPolicy.c  RapidPolicy.c  SBAPolicy.c  TruePolicy.c  retransmission_policy.c  retransmission_policy.h  retransmission_policy_private.h
CommunicationPrimitives/protocols/broadcast/framework/pending_messages/: CMakeLists.txt  messages.c  messages.h  pending_message.c  pending_message.h  pending_messages.c  pending_messages.h
CommunicationPrimitives/protocols/discovery/framework/: CMakeLists.txt  args.c  delivery.h  discovery_environment.c  discovery_environment.h  framework.c  framework.h  handlers.c  handlers.h  internal_events.c  internal_events.h  messages.c  messages.h  neighbors_table.c  neighbors_table.h
CommunicationPrimitives/protocols/discovery/framework/discovery_algorithm/: CMakeLists.txt  common.c  common.h  discovery_algorithm.c  discovery_algorithm.h  discovery_algorithm_private.h  discovery_algorithms.c  discovery_algorithms.h
CommunicationPrimitives/protocols/discovery/framework/discovery_algorithm/discovery_context/: EmptyDiscoveryContext.c  LENWBDiscoveryContext.c  OLSRDiscoveryContext.c  discovery_context.c  discovery_context.h  discovery_context_private.h
CommunicationPrimitives/protocols/discovery/framework/discovery_algorithm/discovery_message/: LENWBDiscoveryMessage.c  LENWBDiscoveryMessage0.c  OLSRDiscoveryMessage.c  SimpleDiscoveryMessage.c  discovery_message.c  discovery_message.h  discovery_message_private.h
CommunicationPrimitives/protocols/discovery/framework/discovery_algorithm/discovery_pattern/: discovery_pattern.c  discovery_pattern.h  discovery_pattern_common.h  discovery_pattern_private.h  hack_scheduler.c  hack_scheduler.h  hack_scheduler_private.h  hello_scheduler.c  hello_scheduler.h  hello_scheduler_private.h  piggyback_filter.c  piggyback_filter.h
CommunicationPrimitives/protocols/discovery/framework/discovery_algorithm/discovery_period/: StaticDiscoveryPeriod.c  discovery_period.c  discovery_period.h  discovery_period_private.h
CommunicationPrimitives/protocols/discovery/framework/discovery_algorithm/link_admission/: age_admission.c  hysteresis_admission.c  link_admission.c  link_admission.h  link_admission_private.h  no_admission.c
CommunicationPrimitives/protocols/discovery/framework/discovery_algorithm/link_quality/: link_quality.c  link_quality.h  link_quality_private.h  moving_average_link_qualities.c  sliding_window_quality.c
CommunicationPrimitives/protocols/routing/framework/: CMakeLists.txt  args.c  forwarding_plane.c  forwarding_plane.h  framework.c  framework.h  handlers.c  handlers.h  internal_events.h  routing_header.c  routing_header.h  routing_neighbors.c  routing_neighbors.h  routing_table.c  routing_table.h  seen_messages.c  seen_messages.h  source_set.c  source_set.h  source_table.c  source_table.h  update.h
CommunicationPrimitives/protocols/routing/framework/routing_algorithm/: CMakeLists.txt  common.h  routing_algorithm.c  routing_algorithm.h  routing_algorithm_private.h  routing_algorithms.h
CommunicationPrimitives/protocols/routing/framework/routing_algorithm/announce_period/: announce_period.c  announce_period.h  announce_period_private.h
CommunicationPrimitives/protocols/routing/framework/routing_algorithm/cost_metric/: cost_metric.c  cost_metric.h  (+3 more)
CommunicationPrimitives/utility/: CMakeLists.txt  byte.h  my_logger.c  my_logger.h  my_math.c  my_math.h  my_misc.c  my_misc.h  my_string.c  my_string.h  my_sys.c  my_sys.h  my_time.c  my_time.h  olsr_utils.c  olsr_utils.h  seq.c  seq.h  sliding_window.c  sliding_window.h  window.c  window.h
CommunicationPrimitives/utility/tlv/: tlv.c  tlv.h  tlv_attrs.c  tlv_attrs.h  tlv_private.h
(+252 files in other folders)
